k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: demo
  labels:
    app: devops-test
spec:
  selector:
    app: devops-test
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
